  * Removed outdated test/test_parser.c (ticket #82)
2012-05-25  Michael Bell <michael.bell@web.de>
  * Released 0.11.1
  * Fixed performance problem during the generation of XML documents.
    Committed the original patch from ticket #81.
    The patch was supplied by Conrad Irwin.
  * The parameter malloc_block of the function wbxml_buffer_create_real
    is only used now for the initial memory allocation. The patch for
    ticket #80 introduced a more agressive algorithm for memory
    re-allocation to support big files.
  * Fixed performance problem during the parsing of XML documents.
    Committed the original patch from ticket #80.
    The patch was supplied by Conrad Irwin.
  * Extract node breaks (null'ed) the previous node link to a next node
    (too early cleanup in wbxml_tree_extract_node of wbxml_tree.c).
    The patch was supplied by Mark Ostrer from Websense (ticket #79).
  * Added a trailing newline to the files THANKS and TODO (ticket #77).
  * The tool xml2wbxml is now covered by LGPL v2.1 (or any later).
    Petr Pisar discovered that wbxml2xml and xml2wbxml used different
    licences.  This was a mistake. Aymerick Jehanne and Michael Bell
    (the copyright holders) agreed on using LGPL as licence.
    (ticket #76)

2011-08-06  Michael Bell <michael.bell@web.de>
  * Released 0.11.0
  * This is an exact copy of 0.11.beta6.

2011-06-06  Michael Bell <michael.bell@web.de>
  * Released 0.11.beta6
  * Fixed handling of base64 encoded data in elements which are flagged
    as WBXML_TAG_OPTION_BINARY. The base64 encoded data is only decoded
    when all data is present (ticket #75).
  * Added two new internal functions for the encoding and decoding of
    base64 in a buffer (including cleanup of wbxml_encoder.c). The
    decoder function supports formatted base64 strings too
    (e.g. blanks, tabs and newlines).
  * Added test for ticket #75 (formatted base64 string in binary tag).
  * Failing tests do no longer remove their temporary data.